<resources>
    <string name="app_name">Sub2_try2</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="patient_name">Patient Name</string>
    <string name="examination_cost">Examination Cost</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="has_insurance">Has Insurance?</string>
    <string name="save">Save</string>
    <string name="student_group"> 1107</string>

</resources>